k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: devops-demo-app
  labels:
    app: devops-demo

spec:
  replicas: 2

  selector:
    matchLabels:
      app: devops-demo

  template:
    metadata:
      labels:
        app: devops-demo

    spec:
      containers:
        - name: devops-demo
          image: ghcr.io/renanfarias/devops-cicd-pipeline-lab/devops-cicd-demo:latest

          ports:
            - containerPort: 8000
