k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: devops-demo-service

spec:
  selector:
    app: devops-demo
  
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
  
  type: ClusterIP
