k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata: 
  name: devops-demo-ingress

spec:
  rules:
    - host: devops-demo.local

      http:
        paths:
          - path: /
            pathType: Prefix

            backend:
              service:
                name: devops-demo-service
                port: 
                  number: 80
